@@ -3,31 +3,40 @@ apply plugin: 'application'
 apply plugin: 'eclipse'
 
 // Dedicated Thread Example
-mainClassName = "nl.cwi.crisp.examples.lambda.DedicatedThreadExample"
+//mainClassName = "nl.cwi.crisp.examples.lambda.DedicatedThreadExample"
+
+// Dedicated Thread JMH
+mainClassName = "nl.cwi.crisp.examples.lambda.Benchmarks"
 
 // Shared Thread Pool Example
 //mainClassName = "nl.cwi.crisp.examples.lambda.SharedThreadPoolExample"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+ext {
+	defaultJvmOpts = " -Xmx1024m -XX:MaxPermSize=256m "
+}
+
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 eclipse {
 	jdt {
-		sourceCompatibility = 1.8
-		targetCompatibility = 1.8
+		sourceCompatibility = "1.8"
+		targetCompatibility = "1.8"
 	}
 }
 
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
 dependencies {
-	compile 'com.codahale.metrics:metrics-core:3.0.0'
+	compile 'com.codahale.metrics:metrics-core:3.0.1'
+	compile 'org.openjdk.jmh:jmh-core:1.0-SNAPSHOT'
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.6'
+    gradleVersion = '1.8'
 }
 
